# rp-spi-tft

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: _2d.rs  color.rs  display.rs  lib.rs  text.rs  utils.rs
core/src/_2d/: mod.rs  sprite.rs
core/src/text/: font.rs  mod.rs
examples/: Cargo.toml
examples/src/: display.rs  terminal.rs
examples/src/assets/: fira_code_regular_nerd_font_complete.rs  mod.rs  naruto_jiraya.rs
examples/src/utils/: mod.rs
src/: main.rs
