[[example]]
name = "display"
path = "./src/display.rs"

[[example]]
name = "terminal"
path = "./src/terminal.rs"

[package]
name = "rp-spi-tft-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { workspace = true }
rp2040-hal = { workspace = true }
cortex-m = { workspace = true }
fugit = { workspace = true }

cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rp-pico = "0.6.0"

usb-device = "0.2.9"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"

rp-spi-tft = { path = "../core" }